js262/test/language/block-scope/syntax/function-declarations/in-statement-position-if-expression-statement-else-statement.js


/*---
es6id: 13.1
description: >
    function declarations in statement position in strict mode:
    if ( Expression ) Statement else Statement
negative:
  phase: parse
  type: SyntaxError
flags: [onlyStrict]
---*/

$DONOTEVALUATE();
if (true) {} else function g() {}

